Fix PR timeline not visible

--- a/Theme.css
+++ b/Theme.css
@@ -7591,7 +7591,7 @@ div[style="background: linear-gradient(to right, rgba(255,255,255,1), rgba(255,2
 }
 
 .TimelineItem:before {
-    background-color: unset !important;
+    background-color: #555555 !important;
 }
 
 .tabnav-tab.selected,
